Fix the bug during loading. Should be visible Loungebet logo.

--- a/skins/loungebet.com/css/skin.css
+++ b/skins/loungebet.com/css/skin.css
@@ -1,3 +1,7 @@
+.is-hidden {
+    display: none;
+}
+
 @font-face {
     font-family: 'icomoon';
     src: url("../../../fonts/icomoon.eot?oladcq0");
